responsive design overflow and footer fixes

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,3 @@ body{
     font-family: 'koulen';
     background-color: rgb(246, 245, 245);
 }
-
-.root{
-    width:100vw;
-}
