--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -7,10 +7,11 @@
     gap:10px;
     margin-bottom:10px;
     margin-top: auto;
-    position:absolute;
+    position:relative;
     left:0;
     bottom:0;
     right:0;
+    text-align: center;
 }
 
 .footer div {
@@ -27,4 +28,10 @@
 
 .down span:hover{
     border-bottom: 1px solid grey;
+}
+
+@media only screen and (max-width: 400px){
+    .footer div{
+        gap:5px;
+    }
 }
