--- a/src/style/shoppingCart.css
+++ b/src/style/shoppingCart.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 30px;
+    height:80vh;
 }
 
 .cart{
@@ -14,7 +15,7 @@
 
 .cart-items{
     overflow: scroll;
-    height:500px;
+    height: 50vh;
 }
 
 .cart-item, 
